# cv-challenge

./: README.md  cv-challenge.cabal
data/: members.yaml
src/: Lib.hs
