name:                cv-challenge
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kayhide/cv-challenge#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , containers
                     , time
                     , data-default
                     , aeson
                     , yaml
                     , filepath
                     , directory
                     , lens
                     , lens-aeson
  default-language:    Haskell2010

executable cv-challenge
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cv-challenge
  default-language:    Haskell2010

test-suite cv-challenge-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cv-challenge
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kayhide/cv-challenge
